# circomlib

./: Cargo.toml
circom/: Cargo.toml
circom/src/: compilation_user.rs  execution_user.rs  input_user.rs  main.rs
circom_algebra/: Cargo.toml
circom_algebra/src/: algebra.rs  modular_arithmetic.rs  simplification_utils.rs
code_producers/: Cargo.toml
code_producers/src/c_elements/: c_code_generator.rs  mod.rs
code_producers/src/wasm_elements/: mod.rs  wasm_code_generator.rs
compiler/: Cargo.toml
compiler/src/: compiler_interface.rs
compiler/src/circuit_design/: build.rs  circuit.rs  template.rs
compiler/src/hir/: analysis_utilities.rs  merger.rs  sugar_cleaner.rs  type_inference.rs
compiler/src/intermediate_representation/: address_type.rs  branch_bucket.rs  call_bucket.rs  compute_bucket.rs  create_component_bucket.rs  load_bucket.rs  store_bucket.rs  translate.rs
compiler/src/ir_processing/: build_inputs_info.rs  build_stack.rs
constant_tracking/: Cargo.toml
constant_tracking/src/: lib.rs
constraint_generation/: Cargo.toml
constraint_generation/src/: compute_constants.rs  execute.rs  lib.rs
constraint_generation/src/environment_utils/: component_representation.rs
constraint_generation/src/execution_data/: executed_program.rs  executed_template.rs
constraint_list/: Cargo.toml
constraint_list/src/: constraint_simplification.rs  lib.rs
constraint_writers/: Cargo.toml
constraint_writers/src/: log_writer.rs  r1cs_writer.rs
dag/: Cargo.toml
dag/src/: constraint_correctness_analysis.rs  lib.rs  map_to_constraint_list.rs  r1cs_porting.rs
parser/: Cargo.toml
parser/src/: include_logic.rs  lib.rs  syntax_sugar_remover.rs
parser_wasm/: Cargo.toml
parser_wasm/src/: include_logic.rs  lang.lalrpop  lib.rs  parser_logic.rs  syntax_sugar_remover.rs
program_structure/: Cargo.toml
program_structure/src/abstract_syntax_tree/: ast.rs  ast_shortcuts.rs  statement_builders.rs  statement_impl.rs
program_structure/src/program_library/: function_data.rs  program_merger.rs  template_data.rs
program_structure/src/utils/: environment.rs  memory_slice.rs
type_analysis/: Cargo.toml
type_analysis/src/analyzers/: custom_gate_analysis.rs  functions_free_of_template_elements.rs  signal_declaration_analysis.rs  symbol_analysis.rs  type_check.rs  type_given_function.rs  unknown_known_analysis.rs
