[workspace]
members = [
  "parser",
  "parser_wasm",
  "circom",
  "compiler",
  "type_analysis",
  "circom_algebra",
  "constraint_list",
  "program_structure",
  "constraint_generation",
  "constraint_writers",
  "constant_tracking",
  "code_producers",
  "dag",
]

[workspace.dependencies]
ansi_term = "0.12.1"
clap = "2.33.0"
codespan = "0.9.0"
codespan-reporting = "0.9.0"
exitcode = "1.1.2"
getrandom = { version = "0.2", default-features = false }
handlebars = "4.1.3"
json = "0.12.4"
lalrpop = "0.19.9"
lalrpop-util = { version = "0.19.9", default-features = false }
log = "0.4"
lz_fnv = "0.1.2"
num-bigint-dig = "0.8.4"
num-traits = "0.2.6"
num_cpus = "1.0"
regex = "1.1.2"
rustc-hex = "2.0.1"
serde = "1.0.82"
serde_derive = "1.0.91"
serde_json = "1.0.68"
wasm-bindgen = "0.2.93"
wast = "39.0.0"
web-time = "1.1.0"
rayon = "1.10.0"
canonical-path = "2.0.2"
path-clean = "1.0.1"
