[package]
name = "compiler"
version = "2.1.9"
authors = ["Costa Group UCM", "iden3"]
edition = "2018"

[dependencies]
constant_tracking = { path = "../constant_tracking" }
program_structure = { path = "../program_structure" }
code_producers = { path = "../code_producers" }
num-bigint-dig = { workspace = true }
num-traits = { workspace = true }
log = { workspace = true }
