[package]
name = "constraint_generation"
version = "2.1.9"
authors = ["Costa Group UCM", "iden3"]
edition = "2018"

[dependencies]
ansi_term = { workspace = true }
num-traits = { workspace = true }
num-bigint-dig = { workspace = true }
compiler = { path = "../compiler" }
circom_algebra = { path = "../circom_algebra" }
program_structure = { path = "../program_structure" }
constraint_writers = { path = "../constraint_writers" }
constraint_list = { path = "../constraint_list" }
dag = { path = "../dag" }
