[package]
name = "constraint_list"
version = "2.1.8"
authors = ["Costa Group UCM", "iden3"]
edition = "2018"

[dependencies]
constraint_writers = { path = "../constraint_writers" }
circom_algebra = { path = "../circom_algebra" }
program_structure = { path = "../program_structure" }
json = { workspace = true }
num_cpus = { workspace = true }
web-time = { workspace = true }
rayon = { workspace = true }
