[package]
name = "parser_wasm"
version = "2.1.9"
authors = ["Costa Group UCM", "iden3"]
edition = "2021"
build = "build.rs"

[build-dependencies]
rustc-hex = { workspace = true }
lalrpop = { workspace = true, features = ["lexer"] }
num-bigint-dig = { workspace = true }
num-traits = { workspace = true }

[dependencies]
program_structure = { path = "../program_structure" }
lalrpop-util = { workspace = true, features = ["lexer"] }
regex = { workspace = true }
rustc-hex = { workspace = true }
num-bigint-dig = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
log = { workspace = true }
wasm-bindgen = { workspace = true }
getrandom = { workspace = true, features = ["js"] }
web-time = { workspace = true }
path-clean = { workspace = true }
rayon = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
