[package]
name = "program_structure"
version = "2.1.9"
authors = ["Costa Group UCM", "iden3"]
edition = "2021"

[dependencies]
codespan = { workspace = true }
codespan-reporting = { workspace = true }
regex = { workspace = true }
rustc-hex = { workspace = true }
num-bigint-dig = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
